--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,21 @@
+name: Coinluxora Status Check
 
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  status-check:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Basic sanity check
+        run: |
+          echo "Coinluxora workflow running..."
+          ls -la
+          echo "All good ✔️"
+          
